# FaceIdentify

./: CMakeLists.txt
src/: main.cpp  qml.qrc  qtquickcontrols2.conf
src/assets/classifier/: classifier.json
src/screen/: detect_thread.cpp  detect_thread.h  reco_thread.cpp  reco_thread.h  screen.cpp  screen.h  train_thread.cpp  train_thread.h
src/view/: FaceTable.qml  Main.qml
